--- a/scss/queries.scss
+++ b/scss/queries.scss
@@ -11,6 +11,7 @@
   border-radius: 100%;
   grid-column: 1;
   grid-row: 1;
+  align-self: center;
 }
 
 .intro {
